packages/net-utils/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: net-utils
spec:
  loadBalancerClass: tailscale
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
