packages/net-utils/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: net-utils
spec:
  selector:
    app: adguard
  ports:
    - port: 80
      targetPort: 3000 # point to 3000 for initial setup
      name: http
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
