packages/net-utils/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: net-utils
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - adguard
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 80
